# foo

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  build_curl_macos.sh
sources/include/foo/: file_1.h
sources/src/: file_1.cpp
tests/: CMakeLists.txt
tests/src/: foo_tests.cpp
